optimization by code refactor and reduce reduncy while adding semicolons and placed a new package into the package.json with also updates to parameters

--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tsung Hung",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "https://github.com/masterfung/Simple-Node",
+  "readme": "./README.md",
+  "dependencies": {
+    "jsonfile": "^2.0.0"
+  }
 }
